--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
-  "name": "BDStreamHub",
-  "short_name": "BDStreamHub",
-  "start_url": "./index.html",
+  "name": "Cricnex",
+  "short_name": "Cricnex",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#111111",
   "theme_color": "#0af",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
