--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
-  "name": "BDStreamHub",
-  "short_name": "BDStream",
-  "start_url": "./index.html",
+  "name": "CricZone Admin Panel",
+  "short_name": "CricZoneAdmin",
+  "start_url": "./",
   "display": "standalone",
-  "background_color": "#111111",
-  "theme_color": "#00ffff",
+  "background_color": "#ffffff",
+  "theme_color": "#0d1b2a",
+  "description": "CricZone Admin Panel for managing live matches",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
